--- a/sample.env
+++ b/sample.env
@@ -1,7 +1,7 @@
-API_ID=
-API_HASH=
-BOT_TOKEN=
-LOG_GROUP_ID=
-MONGO_DB_URI=
-OWNER_ID=
-STRING_SESSION=
+API_ID= 26959674
+API_HASH= e9f9e176856a3799da72bbb034a8fb17
+BOT_TOKEN= 7428831820:AAFmO_MQpp4k0_nzH6kBpWSuWXHjC1TLvkw
+LOG_GROUP_ID= 1002234343268
+MONGO_DB_URI= mongodb+srv://chadolan534:chadolan534@cluster0.5t4pdkn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+OWNER_ID= 5606692752
+STRING_SESSION= BQDNvmIAmkgmbAFfZJlYt10BVI2-vg2bSO3hjlmzF8dSvVXmPyUtnfBZ5_Yaxa6IrJEGyO72UcuHOFmGDaKX0SQud1_nSExfJsIw61dzSdjekXt0ke8QFSOOVrXnnLqps1fm7_RhG27pkrbB0BJeueT_CSH42kMeeLoeCn4Xhr694VoffnYGUBLPOwMnvy-uSX4ciZJjtr0HpcXWqtyzF02rfKraYeNoTDCHkLNI3gaTpvY2XQbp6bs6E_qrgUVaH3wFGDWIGsx15fFVa_sCq0IGntxSoRkXkMmRWd_EWxurR-5s7KRovdtNnw4w9uGGNojrQ6gU-Lw4Ego-dYBg589EcZ2PIAAAAAFOL1eQAA
